@@ -1,12 +1,11 @@
 package be.mirooz.elitedangerous.dashboard.controller;
 
-import be.mirooz.elitedangerous.dashboard.model.Mission;
-import be.mirooz.elitedangerous.dashboard.model.MissionStatus;
-import be.mirooz.elitedangerous.dashboard.model.MissionType;
+import be.mirooz.elitedangerous.dashboard.model.*;
 import be.mirooz.elitedangerous.dashboard.service.MissionService;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.geometry.Insets;
+import javafx.geometry.Pos;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.ProgressBar;
@@ -27,6 +26,11 @@ import java.util.ResourceBundle;
  */
 public class DashboardController implements Initializable {
 
+    // Constantes pour garantir l'alignement
+    private static final double COL_WIDTH_TARGET = 150;
+    private static final double COL_WIDTH_SOURCE = 180;
+    private static final double COL_WIDTH_KILLS  = 80;
+
     @FXML
     private VBox missionsList;
     
@@ -38,6 +42,9 @@ public class DashboardController implements Initializable {
     
     @FXML
     private Label allianceStats;
+
+    @FXML
+    private VBox factionStats;
     
     @FXML
     private Label empireStats;
@@ -60,6 +67,7 @@ public class DashboardController implements Initializable {
     private MissionService missionService;
     private List<Mission> allMissions = new ArrayList<>();
     private MissionStatus currentFilter = MissionStatus.ACTIVE;
+
     
     @Override
     public void initialize(URL location, ResourceBundle resources) {
@@ -88,7 +96,7 @@ public class DashboardController implements Initializable {
                 .filter(mission -> mission.getType() == MissionType.MASSACRE)
                 .filter(mission -> currentFilter == null || mission.getStatus() == currentFilter)
                 .sorted((m1, m2) -> m1.getFaction().compareTo(m2.getFaction())) // Trier par faction
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
         
         for (Mission mission : filteredMissions) {
             VBox missionCard = createMassacreMissionCard(mission);
@@ -318,8 +326,73 @@ public class DashboardController implements Initializable {
         return card;
     }
 
+
     private void updateFactionStats(List<Mission> massacreMissions) {
-        // targetFaction -> (sourceFaction -> kills cumulés)
+        List<TargetFactionStats> stats = computeFactionStats(massacreMissions);
+
+        // Supprimer toutes les lignes après l'en-tête
+        if (factionStats.getChildren().size() > 1) {
+            factionStats.getChildren().remove(1, factionStats.getChildren().size());
+        }
+
+        String lastTargetFaction = null;
+
+        for (TargetFactionStats stat : stats) {
+            for (SourceFactionStats src : stat.getSources()) {
+                HBox row = new HBox(0);
+                row.setAlignment(javafx.geometry.Pos.CENTER_LEFT);
+                row.getStyleClass().add("faction-row");
+
+                Label targetLabel = new Label(
+                        lastTargetFaction != null && lastTargetFaction.equals(stat.getTargetFaction())
+                                ? "" : stat.getTargetFaction()
+                );
+                targetLabel.setPrefWidth(COL_WIDTH_TARGET);
+                targetLabel.getStyleClass().add("faction-col");
+
+                Label sourceLabel = new Label(src.getSourceFaction());
+                sourceLabel.setPrefWidth(COL_WIDTH_SOURCE);
+                sourceLabel.getStyleClass().add("faction-col");
+
+                Label killsLabel = new Label(String.valueOf(src.getKills()));
+                killsLabel.setPrefWidth(COL_WIDTH_KILLS);
+                killsLabel.getStyleClass().addAll("faction-col", "kills");
+
+                row.getChildren().addAll(targetLabel, sourceLabel, killsLabel);
+                factionStats.getChildren().add(row);
+
+                lastTargetFaction = stat.getTargetFaction();
+            }
+
+            // Ligne total
+            HBox totalRow = new HBox(0);
+            totalRow.setAlignment(javafx.geometry.Pos.CENTER_LEFT);
+            totalRow.getStyleClass().add("faction-total");
+
+            Label totalLabel = new Label(""); // pas de répétition
+            totalLabel.setPrefWidth(COL_WIDTH_TARGET);
+            Label textLabel = new Label("➡ Total");
+            textLabel.setPrefWidth(COL_WIDTH_SOURCE);
+            textLabel.setAlignment(Pos.CENTER);
+            textLabel.setStyle("-fx-font-size: 12px; -fx-font-weight: bold; -fx-text-fill: #FF6B00;"); // orange Elite
+            textLabel.getStyleClass().add("faction-col");
+
+            Label totalKills = new Label(String.valueOf(stat.getTotalKills()));
+            totalKills.setPrefWidth(COL_WIDTH_KILLS);
+            totalKills.setAlignment(Pos.CENTER_RIGHT);
+            totalKills.setStyle("-fx-font-size: 12px; -fx-font-weight: bold; -fx-text-fill: #FF6B00;"); // orange Elite
+            totalKills.getStyleClass().addAll("faction-col", "kills");
+
+
+            totalRow.getChildren().addAll(totalLabel, textLabel, totalKills);
+            factionStats.getChildren().add(totalRow);
+
+            lastTargetFaction = null;
+        }
+    }
+
+
+    private List<TargetFactionStats> computeFactionStats(List<Mission> massacreMissions) {
         Map<String, Map<String, Integer>> groupedKills = new HashMap<>();
 
         for (Mission mission : massacreMissions) {
@@ -333,36 +406,23 @@ public class DashboardController implements Initializable {
             }
         }
 
-        // Construire le résumé
-        StringBuilder summaryText = new StringBuilder();
+        List<TargetFactionStats> results = new ArrayList<>();
 
         for (Map.Entry<String, Map<String, Integer>> entry : groupedKills.entrySet()) {
             String targetFaction = entry.getKey();
             Map<String, Integer> sourceMap = entry.getValue();
 
-            // Max des kills parmi les sources regroupées
             int totalKills = sourceMap.values().stream().max(Integer::compareTo).orElse(0);
 
-            if (summaryText.length() > 0) {
-                summaryText.append("\n");
-            }
+            List<SourceFactionStats> sources = sourceMap.entrySet().stream()
+                    .map(e -> new SourceFactionStats(e.getKey(), e.getValue()))
+                    .toList();
 
-            summaryText.append(String.format("🎯 %s: %d kills total\n", targetFaction, totalKills));
-
-            // Détail par source faction
-            for (Map.Entry<String, Integer> sourceEntry : sourceMap.entrySet()) {
-                summaryText.append(String.format("• %s: %d kills\n", sourceEntry.getKey(), sourceEntry.getValue()));
-            }
+            results.add(new TargetFactionStats(targetFaction, totalKills, sources));
         }
 
-        // Mise à jour du label
-        if (allianceStats != null) {
-            allianceStats.setText(summaryText.length() > 0 ? summaryText.toString() : "Aucune mission active");
-        }
-        if (empireStats != null) empireStats.setText("");
-        if (federationStats != null) federationStats.setText("");
-    }
-    @FXML
+        return results;
+    }    @FXML
     private void filterActiveMissions() {
         currentFilter = MissionStatus.ACTIVE;
         applyCurrentFilter();
